<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.evoldig.registro.datosUsuario">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_name"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_name"
            android:hint="@string/label_name"
            android:inputType="textPersonName"
            android:ems="@string/ems_value"
            />


    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_date"
        android:layout_below="@id/til_name">

        <TextView
            android:layout_below="@+id/picDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/showDate"
            android:textSize="18sp" />

        <Button
            android:id="@+id/picDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:onClick="datePicker"
            android:layout_below="@id/picDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_phone"
        android:layout_below="@id/rl_date">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_phone"
            android:hint="@string/label_phone"
            android:inputType="textPhonetic"
            android:ems="@string/ems_value"
            />


    </android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/til_email"
    android:layout_below="@id/til_phone">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_email"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:ems="@string/ems_value"
        />

</android.support.design.widget.TextInputLayout>


<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/til_description"
    android:layout_below="@id/til_email">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_description"
        android:hint="@string/label_description"
        android:inputType="textMultiLine"
        android:ems="@string/ems_value"
        />

</android.support.design.widget.TextInputLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Siguiente"
        android:id="@+id/boton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="false" />


</RelativeLayout>
